Update README.md with comprehensive documentation including architecture diagram, tech stack, configuration examples, and performance metrics